--- a/apps/blog/templates/home.html
+++ b/apps/blog/templates/home.html
@@ -189,46 +189,38 @@
 
     <main>
 
+      {% if sliders %}
       <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
-          <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          {% for slider in sliders %}
+            <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="{{forloop.counter0}}"
+              {% if forloop.counter0 == 0 %}
+                class="active"
+              {% endif %}
+              aria-current="true" aria-label="Slide 1"></button>
+          {% endfor %}
+          {% comment %} <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button> {% endcomment %}
         </div>
         <div class="carousel-inner">
-          <div class="carousel-item active">
-            <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
 
-            <div class="container">
-              <div class="carousel-caption text-end">
-                <h1>عنوان اول</h1>
-                <p>در اینجا توضیحاتی مربوط به اطلاعات صفحه اول قرار میگیرد. این اطلاعات معمولا توسط تیم محتوا تهیه و تولید می‌شود</p>
-                <p><a class="btn btn-lg btn-primary" href="#">توضیحات بیشتر</a></p>
+          {% for slider in sliders %}
+            <div class="carousel-item {% if forloop.counter0 == 0 %}active{% endif %}">
+              <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
+                    preserveAspectRatio="xMidYMid slice" focusable="false"
+                    style="background-image:url('{{slider.image.url}}'); background-size: cover; background-repeat: no-repeat;background-position: top;">
+                  </svg>
+              <div class="container">
+                <div class="carousel-caption {% if slider.text_position == "right" %}text-end{% elif slider.text_position == "left" %}text-start{% endif %}">
+                  <h1>{{slider.title}}</h1>
+                  <p>{{slider.body}}</p>
+                  {% if slider.button_link and slider.button_text %}
+                    <p><a class="btn btn-lg btn-primary" href="{{slider.button_link}}">{{slider.button_text}}</a></p>
+                  {% endif %}
+                </div>
               </div>
             </div>
-          </div>
-          <div class="carousel-item">
-            <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
+          {% endfor %}
 
-            <div class="container">
-              <div class="carousel-caption">
-                <h1>یک مثال دیگر</h1>
-                <p>اینجا نیز همانند اسلاید قبل، توضیحاتی در مورد اسلاید مورد نظر قرار خواهد گرفت.</p>
-                <p><a class="btn btn-lg btn-primary" href="#">مطالعه بیشتر</a></p>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
-
-            <div class="container">
-              <div class="carousel-caption text-end">
-                <h1>و مثال آخر</h1>
-                <p>اینجا نیز همانند اسلاید قبل، توضیحاتی در مورد اسلاید مورد نظر قرار خواهد گرفت.</p>
-                <p><a class="btn btn-lg btn-primary" href="#">مطالعه بیشتر</a></p>
-              </div>
-            </div>
-          </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -239,12 +231,14 @@
           <span class="visually-hidden">بعدی</span>
         </button>
       </div>
+      {% endif %}
 
 
       <!-- Marketing messaging and featurettes
       ================================================== -->
       <!-- Wrap the rest of the page in another container to center all the content. -->
 
+      {% if features %}
       <div class="container marketing">
 
         <div class="row title">
@@ -255,80 +249,25 @@
         <!-- Three columns of text below the carousel -->
         <div class="row">
 
-          <div class="col-lg-3">
-            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-            <h2>شخص ثالث</h2>
-            <p>{% lorem 6 w random %}</p>
-            <p><a class="btn btn-secondary" href="#">ادامه...</a></p>
-          </div>
-
-          <div class="col-lg-3">
-            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-            <h2>بدنه</h2>
-            <p>{% lorem 6 w random %}</p>
-            <p><a class="btn btn-secondary" href="#">ادامه...</a></p>
-          </div>
-
-          <div class="col-lg-3">
-            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-            <h2>موتورسیکلت</h2>
-            <p>{% lorem 6 w random %}</p>
-            <p><a class="btn btn-secondary" href="#">ادامه...</a></p>
-          </div>
-
-          <div class="col-lg-3">
-            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-            <h2>آتش سوزی</h2>
-            <p>{% lorem 6 w random %}</p>
-            <p><a class="btn btn-secondary" href="#">ادامه...</a></p>
-          </div>
-
-          <div class="col-lg-3">
-            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-            <h2>زلزله</h2>
-            <p>{% lorem 6 w random %}</p>
-            <p><a class="btn btn-secondary" href="#">ادامه...</a></p>
-          </div>
-
-          <div class="col-lg-3">
-            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-            <h2>مسافرتی</h2>
-            <p>{% lorem 6 w random %}</p>
-            <p><a class="btn btn-secondary" href="#">ادامه...</a></p>
-          </div>
-
-          <div class="col-lg-3">
-            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-            <h2>پزشکان</h2>
-            <p>{% lorem 6 w random %}</p>
-            <p><a class="btn btn-secondary" href="#">ادامه...</a></p>
-          </div>
-
-          <div class="col-lg-3">
-            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-            <h2>عمر</h2>
-            <p>{% lorem 6 w random %}</p>
-            <p><a class="btn btn-secondary" href="#">ادامه...</a></p>
-          </div>
-
-          <div class="col-lg-3">
-          </div>
-
-          <div class="col-lg-3">
-            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-            <h2>درمان و کرونا</h2>
-            <p>{% lorem 6 w random %}</p>
-            <p><a class="btn btn-secondary" href="#">ادامه...</a></p>
-          </div>
-
-          <div class="col-lg-3">
-            <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-            <h2>سازمانی</h2>
-            <p>{% lorem 6 w random %}</p>
-            <p><a class="btn btn-secondary" href="#">ادامه...</a></p>
-          </div>
+          {% for feature in features %}
+            <div class="col-lg-3">
+              <svg class="bd-placeholder-img rounded-circle" width="140" height="140"
+                    xmlns="http://www.w3.org/2000/svg" aria-label="Placeholder: 140x140"
+                    style="background-image:url('{{feature.get_thumbnail_url_or_default}}');
+                           background-size: cover; background-repeat: no-repeat;
+                           background-position: center;">
+                    role="img" preserveAspectRatio="xMidYMid slice" focusable="false">
+              </svg>
+              <h2>{{feature.title}}</h2>
+              <p>{{feature.subtitle}}</p>
+              {% if feature.button_link and feature.button_text %}
+                <p><a class="btn btn-secondary" href="{{feature.button_link}}">{{feature.button_text}}</a></p>
+              {% endif %}
+            </div>
+          {% endfor %}
 
         </div>
+      {% endif %}
 
 
         <!-- START THE FEATURETTES -->
