--- a/apps/users/templates/users/auth/login-password.html
+++ b/apps/users/templates/users/auth/login-password.html
@@ -10,8 +10,8 @@
     {{ form.password }}
   </div>
   <div class="">
-    {% for error in form.password.errors %}
-      <p class="text-red-600 text-xs">{{ error }}</p>
+    {% for error in form.errors.values %}
+      <p class="text-red-600 text-xs">{{ error.0 }}</p>
     {% endfor %}
   </div>
   <button
