--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
   <!-- /header content -->
 
   <body class="nav-md">
-    <div class="container body max-w-[1800px]">
+    <div class="container body">
       <div class="main_container">
         <div class="col-md-3 left_col hidden-print">
           <div class="left_col scroll-view">
