--- a/apps/users/templates/users/auth/auth-base.html
+++ b/apps/users/templates/users/auth/auth-base.html
@@ -4,13 +4,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="{% static 'css/front.css' %}" rel="stylesheet" />
+  {% block extra_head %}
+    <style>
+        input {
+            text-align: left;
+            outline: none;
+            width: 100%;
+            direction: ltr;
+        }
+    </style>
+  {% endblock %}
   <script src="{% static 'js/tailwind.js' %}"></script>
 </head>
 <body>
     <div class="h-screen flex">
         <div class="flex w-1/2 i bg-cover bg-right justify-around items-center bg-[url('/static/bg.jpg')]">
         <div>
-            <h1 class="text-white font-bold text-4xl font-sans">بیم‌سنج</h1>
+            <h1 class="text-white font-bold text-4xl">بیم‌سنج</h1>
             <p class="text-white mt-1">پلتفرم محبوب و آسان مقایسه و خرید بیمه</p>
             {% comment %} <button type="submit" class="block w-28 bg-white text-indigo-800 mt-4 py-2 rounded-2xl font-bold mb-2"></button> {% endcomment %}
         </div>
