add reminder to perry theme

--- a/apps/perry/templates/perry/pages/landing_full_components.html
+++ b/apps/perry/templates/perry/pages/landing_full_components.html
@@ -4,6 +4,7 @@
     {% include 'perry/components/landings/header.html' %}
     {% include 'perry/components/landings/banner_big.html' %}
     {% include 'perry/components/landings/banner.html' %}
+    {% include 'perry/components/landings/reminder.html' %}
     {% include 'perry/components/landings/blog.html' %}
     {% include 'perry/components/landings/company.html' %}
     {% include 'perry/components/landings/company_alt.html' %}
