add reminder html and css file

--- a/apps/perry/templates/perry/base/base.html
+++ b/apps/perry/templates/perry/base/base.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="{% static 'perry/css/rtl.css' %}">
     <link rel="icon" type="image/png" href="{% static 'perry/img/favicon.png' %}">
     <title>Perry - قالب HTML پری , پوسته سایت شرکتی بیمه</title>
+    {% block extrahead %}    {% endblock extrahead %}    
 	</head>
 
 	<body>
