--- a/apps/perry/templates/perry/components/landings/reminder.html
+++ b/apps/perry/templates/perry/components/landings/reminder.html
@@ -1,22 +1,78 @@
-{% load jalali_tags static crispy_forms_tags %}
+{% load static %}
+{% block extrahead %}
+<link rel="stylesheet" href="{% static 'perry/css/reminder.css' %}">
 
-<div class="row featurette">
-    <div class="col-md-7">
-    <h2>یادآوری بیمه</h2>
-    <p class="lead">می‌توانید بیمه خود را وارد کنید تا در زمان مقرر به شما یادآوری کنیم</p>
+{% endblock extrahead %}
+
+    <div id="root">
+        <div class="bg-[#7e6aff] min-h-screen">
+            <div class="  pt-20 px-4 max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-2">
+              <div class="">
+                <h1 class="text-2xl md:text-3xl font-bold text-white  ">
+                  یادآوری بیمه
+                </h1>
+                <p class=" text-white mt-2 font-bold">
+                  با تنظیم اطلاعات، بیمه شما را یک روز قبل از سررسید به شما یادآوری
+                  میکنیم
+                </p>
+                <form onSubmit={handleSubmit(submit)}>
+                  <div class="my-8">
+                    <input
+                      class="block rounded-lg py-3 w-full my-2 pr-2 outline-none"
+                      type="text"
+                      placeholder="موبایل (مثلا 09123456789)"
+                      {% comment %} {...register("mobile")} {% endcomment %}
+                    />
+                    {% comment %} {errors["mobile"] && (
+                      <p class="my-4 font-bold text-red-900">
+                        {errors["mobile"]?.message}
+                      </p>
+                    )} {% endcomment %}
+                    <input
+                      class="block rounded-lg py-3 w-full my-2 pr-2 outline-none"
+                      type="text"
+                      placeholder="تاریخ سررسید"
+                      {% comment %} {...register("date")} {% endcomment %}
+                    />
+                    {% comment %} {errors["date"] && (
+                      <p class="my-4 font-bold text-red-900">
+                        {errors["date"]?.message}
+                      </p>
+                    )} {% endcomment %}
+                    <input
+                      class="block rounded-lg py-3 w-full my-2 pr-2 outline-none"
+                      type="text"
+                      placeholder="نوع بیمه"
+                      {% comment %} {...register("type")} {% endcomment %}
+                    />
+                    {% comment %} {errors["type"] && (
+                      <p class="my-4 font-bold text-red-900">
+                        {errors["type"]?.message}
+                      </p>
+                    )} {% endcomment %}
+                    <button class="bg-[#058f1f] w-full text-white font-bold rounded-lg py-2 active:scale-95 ease-in-out duration-200">
+                      تایید
+                    </button>
+                  </div>
+                </form>
+              </div>
+              <div class="flex justify-center items-center">
+                <div ref={bimeh} class=" rounded-lg w-2/3 mx-auto"></div>
+              </div>
+            </div>
+            
+      
+            {% comment %} {status =='complete' &&
+            <div class="fixed inset-0 bg-[#7e6aff] flex justify-center items-center flex-col">
+              <div class="relative">
+                <div onClick={()=>setStatus('')} class="fixed top-4 right-6 cursor-pointer text-white font-bold">بازگشت</div>
+                <div ref={completebimeh} class=" rounded-lg w-2/3 md:w-1/3 mx-auto"></div>
+                <p class="text-center text-3xl font-bold text-white ">
+                  اطلاعات با موفقیت ثبت شد.
+                </p>
+              </div>
+            </div>} {% endcomment %}
+      
+          </div>
     </div>
-    <div class="col-md-5">
-    <form method="post" action="{% url 'insurance:reminders-list' %}" id="reminder_form">
-        {% csrf_token %}
-        {{ insurance_reminder_form|crispy }}
-        <div class="d-flex flex-row">
-        <input type="submit" value="به من یادآوری کن!" class="btn btn-success" id="btn_create_reminder">
-        <div class="loader ms-5 d-none" id="reminder_loader"></div>
-        </div>
-        <div class="alert d-none mt-2 alert-dismissible" id="reminder_form_message" role="alert">
-        <span id="reminder_form_message_content"></span>
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-        </div>
-    </form>
-    </div>
-</div>
+    
