add jajali date picker and change serialier date format

--- a/apps/perry/templates/perry/base/base.html
+++ b/apps/perry/templates/perry/base/base.html
@@ -27,6 +27,9 @@
     <link rel="stylesheet" href="{% static 'css/iziToast.min.css' %}">
     <script type="text/javascript" src="{% static 'js/iziToast.min.js' %}"></script> 
     <script type="text/javascript" src="{% static 'js/iziToast.js' %}"></script> 
+    <!-- jalaliDatePickerCdn -->
+    <link rel="stylesheet" href="https://unpkg.com/@majidh1/jalalidatepicker/dist/jalalidatepicker.min.css">
+    <script type="text/javascript" src="https://unpkg.com/@majidh1/jalalidatepicker/dist/jalalidatepicker.min.js"></script>
 
     <title>Perry - قالب HTML پری , پوسته سایت شرکتی بیمه</title>
     {% block extrahead %}    {% endblock extrahead %}    
