--- a/apps/perry/static/perry/css/reminder.css
+++ b/apps/perry/static/perry/css/reminder.css
@@ -2,7 +2,6 @@
     direction: rtl;
     font-family: Yekan,tahoma,Ubunt;
     line-height: inherit;
-    margin: 0;
     display: block;
 }
 
@@ -10,53 +9,6 @@
 .md\:text-3xl {
     font-size: 1.875rem;
     line-height: 2.25rem;
-}
-
-*, :after, :before {
-    --tw-border-spacing-x: 0;
-    --tw-border-spacing-y: 0;
-    --tw-translate-x: 0;
-    --tw-translate-y: 0;
-    --tw-rotate: 0;
-    --tw-skew-x: 0;
-    --tw-skew-y: 0;
-    --tw-scale-x: 1;
-    --tw-scale-y: 1;
-    --tw-pan-x: ;
-    --tw-pan-y: ;
-    --tw-pinch-zoom: ;
-    --tw-scroll-snap-strictness: proximity;
-    --tw-ordinal: ;
-    --tw-slashed-zero: ;
-    --tw-numeric-figure: ;
-    --tw-numeric-spacing: ;
-    --tw-numeric-fraction: ;
-    --tw-ring-inset: ;
-    --tw-ring-offset-width: 0px;
-    --tw-ring-offset-color: #fff;
-    --tw-ring-color: rgba(59,130,246,.5);
-    --tw-ring-offset-shadow: 0 0 #0000;
-    --tw-ring-shadow: 0 0 #0000;
-    --tw-shadow: 0 0 #0000;
-    --tw-shadow-colored: 0 0 #0000;
-    --tw-blur: ;
-    --tw-brightness: ;
-    --tw-contrast: ;
-    --tw-grayscale: ;
-    --tw-hue-rotate: ;
-    --tw-invert: ;
-    --tw-saturate: ;
-    --tw-sepia: ;
-    --tw-drop-shadow: ;
-    --tw-backdrop-blur: ;
-    --tw-backdrop-brightness: ;
-    --tw-backdrop-contrast: ;
-    --tw-backdrop-grayscale: ;
-    --tw-backdrop-hue-rotate: ;
-    --tw-backdrop-invert: ;
-    --tw-backdrop-opacity: ;
-    --tw-backdrop-saturate: ;
-    --tw-backdrop-sepia: ;
 }
 
 .bg-\[\#7e6aff\] {
@@ -96,10 +48,7 @@
     border: 0 solid #e5e7eb;
     box-sizing: border-box;
 }
-user agent stylesheet
-div {
-    display: block;
-}
+
 
 
 .text-white {
@@ -134,10 +83,7 @@ blockquote, dd, dl, figure, h1, h2, h3, h4, h5, h6, hr, p, pre {
     margin: 0;
 }
 
-form {
-    display: block;
-    margin-top: 0em;
-}
+
 .my-8 {
     margin-bottom: 2rem;
     margin-top: 2rem;
@@ -222,15 +168,6 @@ button, input, optgroup, select, textarea {
     margin: 0;
     padding: 0;
 }
-.justify-center {
-    justify-content: center;
-}
-.items-center {
-    align-items: center;
-}
-.flex {
-    display: flex;
-}
 .rounded-lg {
     border-radius: 0.5rem;
 }
@@ -251,7 +188,6 @@ button, input, optgroup, select, textarea {
     background-color: #00000000 !important;
     pointer-events: none !important;
 }
-injected stylesheet
 .bootstrapiso {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     font-size: 1rem;
@@ -262,33 +198,17 @@ injected stylesheet
     background-color: rgb(255, 255, 255);
     margin: 0px;
 }
-injected stylesheet
 .bootstrapiso {
     font-family: sans-serif;
     line-height: 1.15;
     text-size-adjust: 100%;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
-injected stylesheet
-.bootstrapiso {
+.row1{
+    margin: 15px 0;
 }
-.rounded-lg {
-    border-radius: 0.5rem;
+
+.row2{
+    margin: 15px 0
 }
-.w-2\/3 {
-    width: 66.666667%;
-}
-.mx-auto {
-    margin-left: auto;
-    margin-right: auto;
-}
-element.style {
-    width: 100%;
-    height: 100%;
-    transform: translate3d(0px, 0px, 0px);
-    content-visibility: visible;
-}
-audio, canvas, embed, iframe, img, object, svg, video {
-    display: block;
-    vertical-align: middle;
-}
+
